--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,7 @@ services:
       dockerfile: Dockerfile
     container_name: chainer
     network_mode: "host"
+    env_file: ./chainer/app.conf
     volumes:
       - ./chainer:/etc/krakend
     ports:
