--- a/record-repository/Dockerfile
+++ b/record-repository/Dockerfile
@@ -3,4 +3,5 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install -r requirements.txt
 COPY . .
+ENV NO_PROXY "127.0.0.1,localhost"
 CMD uvicorn server:app --host 0.0.0.0 --port 5000
