--- a/chainer/config.json
+++ b/chainer/config.json
@@ -156,7 +156,13 @@
 				"host":[ "http://localhost:5003" ],
 				"url_pattern": "/api/v1/send/{smev_server}",
 				"encoding": "json",
-				"method": "POST"
+				"method": "POST",
+				"extra_config": {
+					"github.com/devopsfaith/krakend/http": {
+					"return_error_details": "smev_connector"
+					 }
+				}
+
 			}
 			]
 		}
