--- a/file-repository/Dockerfile
+++ b/file-repository/Dockerfile
@@ -3,4 +3,4 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install -r requirements.txt
 COPY . .
-CMD uvicorn server:app --host 0.0.0.0 --port 5000 --log-config log-config.yaml
+CMD uvicorn server:app --host 0.0.0.0 --port 5000
