--- a/chainer/config.json
+++ b/chainer/config.json
@@ -121,13 +121,13 @@
 			]
 		},
 		{
-			"endpoint": "/v1/record/{id}/{mesage_type}/xml",
+			"endpoint": "/v1/record/{id}/{mesage_type}/{content_type}",
 			"method": "PUT",
 			"output_encoding": "no-op",
 			"backend": [
 			{
 				"host":[ "http://localhost:5002" ],
-				"url_pattern": "/api/v1/record/{id}/{mesage_type}/xml",
+				"url_pattern": "/api/v1/record/{id}/{mesage_type}/{content_type}",
 				"encoding": "no-op",
 				"method": "PUT"
 			}
@@ -174,6 +174,19 @@
 			]
 		},
 		{
+			"endpoint": "/v1/file/from_smev/{id}",
+			"method": "GET",
+			"output_encoding": "no-op",
+			"backend": [
+			{
+				"host":[ "http://localhost:5004" ],
+				"url_pattern": "/api/v1/file/from_smev/{id}",
+				"encoding": "no-op",
+				"method": "GET"
+			}
+			]
+		},
+		{
 			"endpoint": "/v1/files",
 			"method": "GET",
 			"output_encoding": "no-op",
@@ -196,6 +209,24 @@
 				"host":[ "http://localhost:5003" ],
 				"url_pattern": "/api/v1/send/{smev_server}",
 				"encoding": "json",
+				"method": "POST",
+				"extra_config": {
+					"github.com/devopsfaith/krakend/http": {
+						"return_error_details": "smev_commector"
+					}
+				}				
+			}
+			]
+		},
+		{
+			"endpoint": "/v1/send-to-smev/{smev_server}/raw",
+			"method": "POST",
+			"output_encoding": "no-op",
+			"backend": [
+			{
+				"host":[ "http://localhost:5003" ],
+				"url_pattern": "/api/v1/send/{smev_server}/raw",
+				"encoding": "no-op",
 				"method": "POST",
 				"extra_config": {
 					"github.com/devopsfaith/krakend/http": {
