--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -60,8 +60,8 @@ services:
 
   ftp_worker:
     build:
-      context: file-repository/ftp_worker
-      dockerfile: Dockerfile
+      context: file-repository
+      dockerfile: Dockerfile.worker
     container_name: ftp_worker
     env_file: ./file-repository/app.conf
     volumes:
