--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -111,3 +111,16 @@ services:
     env_file: ./redoc/app.conf
     depends_on:
       - chainer
+
+  plugin_app:
+    build:
+      context: plugins
+      dockerfile: Dockerfile
+    container_name: plugin_app
+    env_file: ./plugins/app.conf
+    ports:
+      - 5005:5005
+    network_mode: "host"
+    command: uvicorn server:app --host 0.0.0.0 --port 5005
+    depends_on:
+      - chainer
