--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -25,6 +25,9 @@ http {
 		location /doc/{
 			proxy_pass	http://127.0.0.1:5080/;
 		}
+        location /wiki/{
+			proxy_pass	http://127.0.0.1:5081/;
+		}
 
         error_page   500 502 503 504  /50x.html;
         location = /50x.html {
