--- a/smev-connector/config.json
+++ b/smev-connector/config.json
@@ -1,10 +1,12 @@
 {
     "smev-test-1-1": {
         "url": "http://smev3-n0.test.gosuslugi.ru:7500/smev/v1.1/ws?wsd",
-        "version": 1.1
+        "version": 1.1,
+        "signature": "isogd"
     },
     "smev-test-1-2": {
         "url": "http://smev3-n0.test.gosuslugi.ru:7500/smev/v1.2/ws?wsd",
-        "version": 1.2
+        "version": 1.2,
+        "signature": "isogd"
     } 
 }
