feat: wiki for rr_plugin

--- a/_docs/mkdocs.yml
+++ b/_docs/mkdocs.yml
@@ -9,7 +9,7 @@ nav:
     - Record Repository: record-repository.md
     - File Repository: file-repository.md
   - External API / Plugins:
-    - Json2xml: json2xml.md
+    - Ros Reestr: rosreestr_plugin.md
   - Raw Examples:
     - Ros Reestr: raw_requests_ros_reestr.md
 theme:
