--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "krakend-smev"]
-	path = krakend-smev
-	url = https://github.com/gosha20777/krakend-smev.git
+[submodule "krakend"]
+	path = krakend
+	url = https://github.com/gosha20777/krakend-cookie
