--- a/smev-connector/Dockerfile
+++ b/smev-connector/Dockerfile
@@ -6,4 +6,4 @@ ENV http_proxy=
 ENV https_proxy=
 ENV no_proxy=
 COPY . .
-CMD uvicorn server:app --host 0.0.0.0 --port 5000
+CMD uvicorn main:app --host 0.0.0.0 --port 5000
