--- a/configs/smev-connector/config-v1.0.json
+++ b/configs/smev-connector/config-v1.0.json
@@ -2,11 +2,19 @@
     "smev-test-1-1": {
         "url": "http://smev3-n0.test.gosuslugi.ru:7500/smev/v1.1/ws?wsd",
         "version": "1.1",
-        "signature": "isogd"
+        "client_signatures": [ "isogd" ],
+        "worker_signatures": [],
+        "ftp_host": "",
+        "ftp_port": 21,
+        "signer_url": "http://mogt-ml:8080/v1/signer"
     },
     "smev-test-1-2": {
         "url": "http://smev3-n0.test.gosuslugi.ru:7500/smev/v1.2/ws?wsd",
         "version": "1.2",
-        "signature": "isogd"
+        "client_signatures": [ "isogd" ],
+        "worker_signatures": [],
+        "ftp_host": "",
+        "ftp_port": 21,
+        "signer_url": "http://mogt-ml:8080/v1/signer"
     }
 }
