--- a/configs/smev-connector/config-v1.0.json
+++ b/configs/smev-connector/config-v1.0.json
@@ -3,7 +3,7 @@
         "url": "http://smev3-n0.test.gosuslugi.ru:7500/smev/v1.1/ws?wsd",
         "version": "1.1",
         "client_signatures": [ "isogd" ],
-        "worker_signatures": [],
+        "worker_signatures": [ "ulyanovsk" ],
         "ftp_host": "",
         "ftp_port": 21,
         "signer_url": "http://mogt-ml:8080/v1/signer"
@@ -12,7 +12,7 @@
         "url": "http://smev3-n0.test.gosuslugi.ru:7500/smev/v1.2/ws?wsd",
         "version": "1.2",
         "client_signatures": [ "isogd" ],
-        "worker_signatures": [],
+        "worker_signatures": [ ],
         "ftp_host": "",
         "ftp_port": 21,
         "signer_url": "http://mogt-ml:8080/v1/signer"
