--- a/configs/file-repository/app.conf
+++ b/configs/file-repository/app.conf
@@ -4,4 +4,5 @@ POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_DB=example
 STORAGE=/app/storage
-FTP=10.10.80.121
+FTP=smev3-n0.test.gosuslugi.ru
+#FTP=10.10.80.121
