--- a/configs/krakend/config.json
+++ b/configs/krakend/config.json
@@ -277,7 +277,7 @@
 			"backend": [
 			{
 				"host":[ "http://localhost:6505" ],
-				"url_pattern": "/api/v1/plugin/{plugin_name}",
+				"url_pattern": "/api/v1/{plugin_name}",
 				"encoding": "no-op",
 				"method": "POST"				
 			}
